# src/main/java/kabopok/server/mappers/ProductMapper.java
@@ -1,0 +1,12 @@
+package kabopok.server.mappers;
+
+import generated.kabopok.server.api.model.ProductDTO;
+import kabopok.server.entities.Product;
+import org.mapstruct.Mapper;
+
+@Mapper(componentModel = "spring", uses = {ProductMapper.class})
+public interface ProductMapper {
+
+  public Product map(ProductDTO productDTO);
+
+}
